# hunter

./: .gitignore  CHANGES.md  CLAUDE.md  LICENSE  README.md  generate_telemetry.py  index.html  pyproject.toml  requirements.txt  reversing_the_asymmetry_part2_buildlog.md  run_discovery.py  run_dispatch.py  run_experiment.py  run_experiment1.py  run_experiment_005.py  run_hunt.py  run_scan.py  score_hunt.py
engine/: coverage.py  detection.py  dispatcher.py  environment.py  evidence.py  hunter.py  render.py  report_gate.py  rules.py  runner.py  scoring.py  telemetry.py  topology_model.py  verifier.py
engine/collectors/: discovery.py  fixtures.py  generative.py  scan.py
engine/parsers/: __init__.py
engine/prompts/: confab_grader_system.md  detector_system.md  exfil_confab_grader_system.md  fixture_router_system.md  grader_system.md  hunter_dispatcher_system.md  hunter_system.md  matcher_system.md  telemetry_system.md  verifier_system.md
environments/: env_005_fixtures.json
environments/env_000_dummy/: ground_truth.md  topology.json
environments/env_001_noisy/: ground_truth.md  topology.json
environments/env_002_competing_narratives/: ground_truth.md  topology.json
environments/env_003_wrong_story/: coverage.json  ground_truth.md  rubric.json  topology.json
environments/env_004_cloud_identity_lotl/: coverage.json  ground_truth.md  rubric.json
environments/env_004_cloud_identity_lotl_control/: ground_truth.md  rubric.json  topology.json
environments/env_005_favorable_clean/: ground_truth.md  rubric.json  sources.json
tests/: test_report_gate.py
(+39 files in other folders)
